--- a/website/templates/Jeu1-choix.jinja
+++ b/website/templates/Jeu1-choix.jinja
@@ -17,7 +17,7 @@
         <option value={{i}}>{{i}} tickets</option>
         {% endfor %}
     </select>
-    <button name="jeu1" type="submit" class="w3-button small w3-text-white theme-light-1 full-width">Valider</button>
+    <button name="jeu1" type="submit" class="w3-button small theme-light-1 full-width">Valider</button>
 </form>
 </div>
 
