--- a/website/templates/Jeu2-reveal.jinja
+++ b/website/templates/Jeu2-reveal.jinja
@@ -9,14 +9,12 @@
   {% for player_it in engine.players %}
   <div class="flip-card card-size">
     <div id="card{{ loop.index0 }}" {% if reveal_state[loop.index0] %} style="transform: rotateY(180deg)" {% endif %} class="flip-card-inner">
-      <div class="flip-card-front {{ player_it.color['name'] }}-light" }};">
-        <b class="large w3-padding">{{ player_it.name }}</b>
+      <div class="flip-card-front {{ player_it.color['name'] }}-light }}">
+        <b class="w3-xlarge">{{ player_it.name }}</b>
       </div>
-      <div class="flip-card-back {{ player_it.color['name'] }}-light" }};">
-        <b class="large w3-padding">{{ player_it.name }}</b>
-        <div class="w3-display-container" style="height:50px;">
-          <div class="circle-big w3-lobster w3-xxlarge w3-display-middle w3-text-white {{ player_it.color['name'] }}-dark">{{ player_it.choice }}</div>
-        </div>
+      <div class="flip-card-back {{ player_it.color['name'] }}-light }} flex-vertical center-items">
+        <b class="w3-xlarge">{{ player_it.name }}</b>
+        <div class="circle-big w3-lobster w3-xxlarge w3-text-white {{ player_it.color['name'] }}-dark" style="margin:6px">{{ player_it.choice }}</div>
       </div>
     </div>
   </div>
