--- a/website/templates/Jeu3-choix.jinja
+++ b/website/templates/Jeu3-choix.jinja
@@ -4,13 +4,12 @@
 {% block title %}Flouze - Jeu 3{% endblock %}
 {% block content%}
 
-<form method="POST" class="w3-card-4 w3-center w3-white w3-text-white animate__animated animate__fadeIn">
-<header class="w3-padding large theme-dark-3">
+<form method="POST" class="w3-card-4 w3-center w3-white animate__animated animate__fadeIn container-jeu-1">
+<header class="w3-padding theme-dark-3">
     Combien shouaitez vous investir ?
 </header>
-<p><input class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" name="montant" type="number" style="width:120px; display:inline-block;"></p>
-<button name="jeu3" type="submit" class="w3-button theme-dark-3">Valider</button>
-<p>
+<input class="w3-input w3-border w3-round-large w3-center w3-margin" placeholder="Montant" name="montant" type="number" style="width:7em; display:inline-block;">
+<button name="jeu3" type="submit" class="w3-button theme-light-3 full-width small">Valider</button>
 </form>
 
 {% endblock %}
