--- a/website/templates/results.jinja
+++ b/website/templates/results.jinja
@@ -10,7 +10,7 @@
   {{ player.message }}
   {% if player.last_profit != 0 %}
     <form action="partager_profit" method="GET">
-      <p><button name="partager" type="submit" class="w3-btn w3-green">Partager</button></p>
+      <button name="partager" type="submit" class="w3-btn w3-green w3-margin">Partager</button>
     </form>
   {% endif %}
 </div>
