--- a/website/static/flouze.css
+++ b/website/static/flouze.css
@@ -160,6 +160,10 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-pale-blue{color:#000;background-color:#ddffff}
 .w3-text-white{color:#fff}
 .w3-text-black{color:#000}
+.w3-text-green{color:#4CAF50}
+.w3-text-yellow{color:#ffeb3b}
+.w3-text-red{color:#f44336}
+.w3-text-teal{color:#009688!important}
 .w3-border-blue{border-color:#2196F3}
 .w3-border-green{border-color:#4CAF50}
 .w3-border-red{border-color:#f44336}
@@ -192,7 +196,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .theme-light-4{color:#000;background-color:#60a7c1}
 .theme-dark-5{color:#fff;background-color:#6b017f}
 .theme-light-5{color:#000;background-color:#c470d4}
-.border-theme-dark-5{border-color:#6b017f}
+.border-theme-dark-5{border:5px solid #c470d4;}
 
 /* Custom */
 .star-table{float:left;}
@@ -205,17 +209,10 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 
 .top-bar{height:min(63px, 9vh); display: flex; flex-direction: row-reverse;}
 
+@media (min-height:680px){.margins-partager{margin:8px;}}
+
 @media (min-width:1000px){
-  .star-cell{padding:8px 16px}
-
-  .small{font-size:20px}
-  .medium{font-size:25px}
-  .large{font-size:33px}
-  .huge{font-size:40px}
-
-  h2{font-size:50px}
-
-  .top-bar{height:60px}
+  .star-cell{padding:8px 16px; gap:0.7em}
 }
 
 @media (max-height:700px){
@@ -237,8 +234,6 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .circle input{display:none}
 @media (max-width:400px){.circle {border-radius: 50%;width: 50px;height: 50px;font-size:26px; margin:2px; border:4px solid #009688;}}
 .circle-big {border-radius:50%; width:55px; height:55px; font-size:36px;}
-
-@media (max-width:500px){.contrainte {width: 280px}}
 
 @media (max-width:1000px){.contrainte_reveal {width: 500px}}
 @media (max-width:500px){.contrainte_reveal {width: 320px}}
@@ -270,6 +265,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 .flip-card-front, .flip-card-back {
+  padding:8px;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -288,6 +284,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .flex-vertical {display:flex; flex-direction:column;}
 
 .space-between {justify-content:space-between;}
+.space-around {justify-content:space-around;}
 .center-items{align-items:center}
 
 .full-width{width:100%}
