--- a/website/templates/Jeu5-Valider.jinja
+++ b/website/templates/Jeu5-Valider.jinja
@@ -5,16 +5,15 @@
 {% block donation_button %}{% endblock %}
 {% block content %}
 
-  <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:350px;">
-  <header class="w3-container w3-padding large theme-dark-5">
+  <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn container-jeu-1">
+  <header class="w3-container w3-padding theme-dark-5">
       {{ player.message }}
   </header>
   <form class="w3-container" method="POST">
-  <p>
-    <button name="jeu5" type="submit" value="refusé" class="w3-margin-right w3-button w3-red" style="width:120px;">Refuser</button>
-    <button name="jeu5" type="submit" value="accepté" class="w3-margin-left w3-button theme-dark-5" style="width:120px;">Accpeter</button>
-  </p>
-  <p>
+  <div class="flex-horizontal space-around" style="margin:1em 0">
+    <button name="jeu5" type="submit" value="refusé" class="w3-button w3-red" style="width:6em;">Refuser</button>
+    <button name="jeu5" type="submit" value="accepté" class="w3-button theme-dark-5" style="width:6em;">Accpeter</button>
+  </div>
 </form>
   </div>
 
