--- a/website/templates/Jeu5-reveal.jinja
+++ b/website/templates/Jeu5-reveal.jinja
@@ -8,14 +8,14 @@
 {% block donation_button %}{% endblock %}
 {% block content %}
 
-<div class="w3-center w3-white animate__animated animate__fadeIn" style="width:320px;">
-  <header class="w3-text-white w3-padding large theme-dark-5">
+<div class="w3-center w3-white animate__animated animate__fadeIn" style="max-width:340px;">
+  <header class="w3-text-white w3-padding theme-dark-5">
       {{ player.message }}
   </header>
   <div class="w3-margin-top" style="display:flex; justify-content:center; align-items:center; flex-wrap:wrap; gap:16px">
     {% for other_player in other_players %}
     <div class="w3-card w3-padding w3-half {{ other_player.color['name'] }}-light" style="width:150px; height:150px;">
-      <b class="large w3-padding">{{ other_player.name }}</b>
+      <b class="w3-xlarge w3-padding">{{ other_player.name }}</b>
       <div class="w3-padding-small w3-text-white {{ other_player.color['name'] }}-dark">{{ proposition[loop.index0] }}</div>
       {% if other_player.choice == 0 %}
       <div class="w3-padding-small w3-white w3-text-red">Refusé</div>
@@ -27,7 +27,7 @@
   </div>
   <div class="w3-center">
       <form method="POST">
-        <button name="jeu5" value="nouvelle_proposition" type="submit" class="w3-button w3-margin w3-padding w3-text-white theme-dark-5">Faire une nouvelle proposition</button>
+        <button name="jeu5" value="nouvelle_proposition" type="submit" class="w3-button w3-padding theme-light-5 full-width small w3-margin-top">Faire une nouvelle proposition</button>
       </form>
   </div>
 </div>
