--- a/website/templates/base.jinja
+++ b/website/templates/base.jinja
@@ -34,16 +34,15 @@
 
   {% block player_money %}
   <!--Top bar with money-->
-  <div onclick="var history = document.getElementById('history'); history.classList.remove('hidden'); var history_list = document.getElementById('history_list').classList.remove('hidden'); history.scrollTop = history.scrollHeight;" class="top-bar theme-dark-{{game_nb}} huge">
+  <div onclick="var history = document.getElementById('history'); history.classList.remove('hidden'); var history_list = document.getElementById('history_list').classList.remove('hidden'); history.scrollTop = history.scrollHeight;" class="top-bar theme-dark-{{game_nb}} huge space-between center-items">
     <span>
       <span id="flouze">{{ player.flouze }}</span>
       <img src="{{ url_for("static", filename="images/coin.png") }}" class="coin" alt="Coin">
     </span>
     <!--Saved Flouze for game 3-->
     {% if player.saved_flouze %}
-    <span class="large">
-      ({{ player.saved_flouze }}
-      <img src="{{ url_for("static", filename="images/coin.png") }}" class="coin" alt="Coin">)
+    <span class="medium w3-margin-left">
+      ({{ player.saved_flouze }})
     </span>
     {% endif %}
   </div>
