--- a/website/templates/choix_etoiles.jinja
+++ b/website/templates/choix_etoiles.jinja
@@ -4,15 +4,15 @@
 {% block title %}Donner des étoiles ?{% endblock %}
 {% block content%}
 
-  <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:350px;">
-  <header class="w3-container large theme-dark-5">
+  <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn container-jeu-1">
+  <header class="w3-container w3-padding theme-dark-5">
       Shouaitez-vous léguer des étoiles ?
   </header>
   <form class="w3-container" method="POST">
-  <p>
-    <button type="submit" name="don_etoiles" value="oui" formaction="/donner_des_etoiles" class="w3-margin-right w3-button theme-dark-5" style="width:120px;">OUI</button>
-    <button type="submit" name="don_etoiles" value="terminer" class="w3-margin-left w3-button w3-red" style="width:120px;">C'est mort</button>
-  </p>
+  <div class="flex-horizontal space-around" style="margin:0.5em 0">
+    <button type="submit" name="don_etoiles" value="oui" formaction="/donner_des_etoiles" class="w3-button theme-dark-5" style="width:5em;">OUI</button>
+    <button type="submit" name="don_etoiles" value="terminer" class="w3-button w3-red" style="width:5em;">NON</button>
+  </div>
   <p>
 </form>
   </div>
