--- a/website/templates/don_etoiles.jinja
+++ b/website/templates/don_etoiles.jinja
@@ -4,23 +4,22 @@
 {% block title %}Donner des étoiles{% endblock %}
 {% block content %}
 
-  <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:250px;">
-  <header class="w3-container large theme-dark-{{ game.game_nb }}">
+  <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:13em;">
+  <header class="w3-container w3-padding theme-dark-{{ game.game_nb }}">
       À qui shouaitez-vous léguer des étoiles ?
   </header>
   <form class="w3-container" method="POST">
-  <select name="destinataire" class="w3-select w3-border w3-margin w3-round-large w3-center" style="width:120px;">
+  <select name="destinataire" class="w3-select w3-border w3-margin w3-round-large w3-center small" style="width:120px;">
     <option value="" disabled="" selected="">Destinataire</option>
     {% for other_player in player.other_players %}
       <option value={{ loop.index0 }}>{{ other_player.name }}</option>
     {% endfor %}}
   </select>
-  <br><input name="quantité" class="w3-input w3-border w3-round-large w3-center" placeholder="Quantitée" type="number" style="width:120px; display:inline-block;">
-  <p>
-    <button type="submit" name="envoyer" value="{{ engine.get_nonce() }}" class="w3-margin-right w3-button theme-dark-{{ game.game_nb }}">Envoyer</button>
-    <button type="submit" formaction="/" class="w3-margin-left w3-button w3-red">Retour</button>
-  </p>
-  <p>
+  <br><input name="quantité" class="w3-input w3-border w3-round-large w3-center small" placeholder="Quantitée" type="number" style="width:120px; display:inline-block;">
+  <div class="flex-horizontal space-around" style="margin:0.5em 0">
+    <button type="submit" name="envoyer" value="{{ engine.get_nonce() }}" class="w3-button theme-dark-{{ game.game_nb }}">Envoyer</button>
+    <button type="submit" formaction="/" class="w3-button w3-red">Retour</button>
+  </div>
   </form>
   </div>
 
