--- a/website/templates/faire_un_don.jinja
+++ b/website/templates/faire_un_don.jinja
@@ -5,22 +5,22 @@
 {% block donation_button %}{% endblock %}
 {% block content %}
 
-  <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:240px;">
-  <header class="w3-container w3-padding large theme-dark-{{ game.game_nb }}" style="font-size:22px">
+  <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:12em;">
+  <header class="w3-container w3-padding theme-dark-{{ game.game_nb }} large">
       Faire un don
   </header>
   <form class="w3-container" method="POST">
-  <select name="destinataire" class="w3-select w3-border w3-round-large w3-center" style="width:120px; margin-top:16px; margin-bottom:8px">
+  <select name="destinataire" class="w3-select w3-border w3-round-large w3-center small" style="width:8em; margin-top:16px; margin-bottom:8px">
     <option value="" disabled="" selected="">Destinataire</option>
     {% for other_player in player.other_players %}
       <option value={{ loop.index0 }}>{{ other_player.name }}</option>
     {% endfor %}
   </select>
-  <input name="montant" class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" type="number" style="width:120px; display:inline-block;">
-  <p>
-    <button type="submit" formaction="/" class="w3-button w3-margin-right w3-red">en fait non</button>
-    <button type="submit" name="envoyer" value="{{ engine.get_nonce() }}" class="w3-button theme-dark-{{ game.game_nb }}">Envoyer</button>
-  </p>
+  <input name="montant" class="w3-input w3-border w3-round-large w3-center small" placeholder="Montant" type="number" style="width:8em; display:inline-block;">
+  <div class="flex-horizontal space-around" style="margin:0.5em 0">
+    <button type="submit" formaction="/" class="w3-button w3-red small">en fait non</button>
+    <button type="submit" name="envoyer" value="{{ engine.get_nonce() }}" class="w3-button theme-dark-{{ game.game_nb }} small">Envoyer</button>
+  </div>
   </form>
   </div>
 
