--- a/website/templates/quiz.jinja
+++ b/website/templates/quiz.jinja
@@ -4,7 +4,7 @@
 {% block title %}QUIZ{% endblock %}
 {% block content %}
 
-<div class="w3-card-4 w3-center w3-padding animate__animated animate__jackInTheBox theme-dark-5 border-theme-dark-5" style="max-width:90%">
+<div class="w3-card-4 w3-center w3-padding animate__animated animate__jackInTheBox theme-dark-5 border-5" style="max-width:90%">
 {% if player == game.current_guesser %}
 <form method="POST">
   <p><input name="réponse" class="w3-input w3-border w3-round-large w3-center" placeholder="Votre réponse" type="text" style="width:10em;"></p>
