partial validation before form submit

--- a/website/templates/choix_etoiles.jinja
+++ b/website/templates/choix_etoiles.jinja
@@ -10,7 +10,7 @@
   </header>
   <form class="w3-container" method="POST">
   <div class="flex-horizontal space-around" style="margin:0.5em 0">
-    <button type="submit" name="don_etoiles" value="oui" formaction="/donner_des_etoiles" class="w3-button theme-dark-5" style="width:5em;">OUI</button>
+    <button type="button" name="don_etoiles" onclick="window.location.href='/donner_des_etoiles'" class="w3-button theme-dark-5" style="width:5em;">OUI</button>
     <button type="submit" name="don_etoiles" value="terminer" class="w3-button w3-red" style="width:5em;">NON</button>
   </div>
   <p>
