--- a/website/templates/Jeu1-choix.jinja
+++ b/website/templates/Jeu1-choix.jinja
@@ -9,8 +9,8 @@
     Combien de tiquets voulez-vous mettre en jeu ?
 </header>
 <form method="POST" class="flex-vertical center-items">
-    <select class="w3-select w3-border w3-margin small" id="tickets" name="tickets" style="width:250px">
-        <option value="" disabled="" selected="">Nombre de tickets</option>
+    <select class="w3-select w3-border w3-margin small" id="tickets" name="tickets" style="width:250px" required>
+        <option value="" selected disabled>Nombre de tickets</option>
         <option value=0>Aucun ticket</option>
         <option value=1>1 ticket</option>
         {% for i in range(2, 21)%}
