--- a/website/templates/Jeu2-choix.jinja
+++ b/website/templates/Jeu2-choix.jinja
@@ -11,7 +11,7 @@
 <form method="POST">
   <div class="w3-margin w3-lobster">
     {% for choice in range(1, 6) %}
-      <label class="circle w3-hover-opacity"><input type="radio" name="choice" value={{ choice }} onchange="update_choice(this)"/>{{ choice }}</label>
+      <label class="circle w3-hover-opacity"><input type="radio" name="choice" value={{ choice }} onchange="update_choice(this)" required/>{{ choice }}</label>
     {% endfor %}
   </div>
   <p><button name="jeu2" type="submit" class="w3-button w3-text-white theme-dark-2">Valider</button></p>
