--- a/website/templates/Jeu5-proposition.jinja
+++ b/website/templates/Jeu5-proposition.jinja
@@ -15,7 +15,7 @@
   {% for other_player in other_players %}
   <div class="w3-card w3-padding {{ other_player.color['name'] }}-light" style="width:140px">
     <b class="w3-xlarge w3-padding">{{ other_player.name }}</b>
-    <input id=proposition{{ loop.index0 }} onchange="update_rest()" class="w3-input w3-border w3-round-large w3-center w3-large" placeholder="Montant" name={{ other_player.name }} type="number" style="width:110px;">
+    <input id=proposition{{ loop.index0 }} onchange="update_rest()" class="w3-input w3-border w3-round-large w3-center w3-large" placeholder="Montant" name={{ other_player.name }} type="number" style="width:110px;" required>
   </div>
   {% endfor %}
 </div>
