--- a/website/templates/don_etoiles.jinja
+++ b/website/templates/don_etoiles.jinja
@@ -9,16 +9,17 @@
       À qui shouaitez-vous léguer des étoiles ?
   </header>
   <form class="w3-container" method="POST">
-  <select name="destinataire" class="w3-select w3-border w3-margin w3-round-large w3-center small" style="width:120px;">
-    <option value="" disabled="" selected="">Destinataire</option>
+  <select name="destinataire" class="w3-select w3-border w3-margin w3-round-large w3-center small" style="width:120px;" required>
+    <option value="" selected disabled>Destinataire</option>
     {% for other_player in player.other_players %}
       <option value={{ loop.index0 }}>{{ other_player.name }}</option>
     {% endfor %}}
   </select>
-  <br><input name="quantité" class="w3-input w3-border w3-round-large w3-center small" placeholder="Quantitée" type="number" style="width:120px; display:inline-block;">
+  <br>
+  <input name="quantité" class="w3-input w3-border w3-round-large w3-center small" placeholder="Quantitée" type="number" style="width:120px; display:inline-block;" required>
   <div class="flex-horizontal space-around" style="margin:0.5em 0">
     <button type="submit" name="envoyer" value="{{ engine.get_nonce() }}" class="w3-button theme-dark-{{ game.game_nb }}">Envoyer</button>
-    <button type="submit" formaction="/" class="w3-button w3-red">Retour</button>
+    <button type="button" onclick="window.location.href='/'" class="w3-button w3-red">Retour</button>
   </div>
   </form>
   </div>
