--- a/website/templates/faire_un_don.jinja
+++ b/website/templates/faire_un_don.jinja
@@ -10,15 +10,15 @@
       Faire un don
   </header>
   <form class="w3-container" method="POST">
-  <select name="destinataire" class="w3-select w3-border w3-round-large w3-center small" style="width:8em; margin-top:16px; margin-bottom:8px">
-    <option value="" disabled="" selected="">Destinataire</option>
+  <select name="destinataire" class="w3-select w3-border w3-round-large w3-center small" style="width:8em; margin-top:16px; margin-bottom:8px" required>
+    <option value="" selected disabled>Destinataire</option>
     {% for other_player in player.other_players %}
       <option value={{ loop.index0 }}>{{ other_player.name }}</option>
     {% endfor %}
   </select>
-  <input name="montant" class="w3-input w3-border w3-round-large w3-center small" placeholder="Montant" type="number" style="width:8em; display:inline-block;">
+  <input name="montant" class="w3-input w3-border w3-round-large w3-center small" placeholder="Montant" type="number" style="width:8em; display:inline-block;" required>
   <div class="flex-horizontal space-around" style="margin:0.5em 0">
-    <button type="submit" formaction="/" class="w3-button w3-red small">en fait non</button>
+    <button type="button" onclick="window.location.href='/'" class="w3-button w3-red small">en fait non</button>
     <button type="submit" name="envoyer" value="{{ engine.get_nonce() }}" class="w3-button theme-dark-{{ game.game_nb }} small">Envoyer</button>
   </div>
   </form>
