--- a/website/templates/Jeu1-choix.jinja
+++ b/website/templates/Jeu1-choix.jinja
@@ -11,10 +11,10 @@
 <form method="POST" class="flex-vertical center-items">
     <select class="w3-select w3-border w3-margin small" id="tickets" name="tickets" style="width:250px" required>
         <option value="" selected disabled>Nombre de tickets</option>
-        <option value=0>Aucun ticket</option>
-        <option value=1>1 ticket</option>
+        <option value="0">Aucun ticket</option>
+        <option value="1">1 ticket</option>
         {% for i in range(2, 21)%}
-        <option value={{i}}>{{i}} tickets</option>
+        <option value="{{i}}">{{i}} tickets</option>
         {% endfor %}
     </select>
     <button name="jeu1" type="submit" class="w3-button small theme-light-1 full-width">Valider</button>
