--- a/website/templates/Jeu3-choix.jinja
+++ b/website/templates/Jeu3-choix.jinja
@@ -8,7 +8,7 @@
 <header class="w3-padding theme-dark-3">
     Combien shouaitez vous investir ?
 </header>
-<input class="w3-input w3-border w3-round-large w3-center w3-margin" placeholder="Montant" name="montant" type="number" style="width:7em; display:inline-block;" required>
+<input class="w3-input w3-border w3-round-large w3-center w3-margin" placeholder="Montant" name="montant" type="number" style="width:7em; display:inline-block;" min="0" required>
 <button name="jeu3" type="submit" class="w3-button theme-light-3 full-width small">Valider</button>
 </form>
 
