--- a/website/static/flouze.css
+++ b/website/static/flouze.css
@@ -290,6 +290,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .full-width{width:100%}
 
 .main-content-div {width: 100%; justify-content:space-evenly; align-items:center; flex-grow: 1}
-.body {min-height: 100vh; justify-content:flex-start;}
+html {height: 100%;}
+body {height: 100%; justify-content:flex-start;}
 
-.container-jeu-1{max-width:500px; width:90%; min-width:300px;}
+.container-jeu-1{max-width:min(90%, 560px); min-width:300px;}
