--- a/website/templates/Jeu1-choix.jinja
+++ b/website/templates/Jeu1-choix.jinja
@@ -6,7 +6,7 @@
 
 <div class="w3-card-4 w3-center w3-white animate__animated animate__fadeIn container-jeu-1">
 <header class="w3-text-white w3-padding-large theme-dark-1" style="line-height:1.3em">
-    Combien de tiquets voulez-vous mettre en jeu ?
+    Combien de tickets voulez-vous mettre en jeu ?
 </header>
 <form method="POST" class="flex-vertical center-items">
     <select class="w3-select w3-border w3-margin small" id="tickets" name="tickets" style="width:250px" required>
