--- a/website/templates/Jeu3-choix.jinja
+++ b/website/templates/Jeu3-choix.jinja
@@ -6,7 +6,7 @@
 
 <form method="POST" class="w3-card-4 w3-center w3-white animate__animated animate__fadeIn container-jeu-1">
 <header class="w3-padding theme-dark-3">
-    Combien shouaitez vous investir ?
+    Combien souhaitez-vous investir ?
 </header>
 <input class="w3-input w3-border w3-round-large w3-center w3-margin" placeholder="Montant" name="montant" type="number" style="width:7em; display:inline-block;" min="0" required>
 <button name="jeu3" type="submit" class="w3-button theme-light-3 full-width small">Valider</button>
