--- a/website/templates/login.jinja
+++ b/website/templates/login.jinja
@@ -34,10 +34,10 @@
       </div>
 
       <form class="w3-container" method="POST">
+        <label>Prénom</label>
         <input type="text" class="w3-input w3-margin-top" id="firstName" name="firstName" required>
-        <label>Prénom</label></p>
+        <label>Mot de passe</label>
         <input type="password" class="w3-input w3-margin-top" id="password" name="password" required>
-        <label>Mot de passe</label></p>
         <p class="w3-center"><button type="submit" class="w3-btn w3-green">Se connecter</button></p>
       </form>
     </div>
