--- a/website/templates/choix_etoiles.jinja
+++ b/website/templates/choix_etoiles.jinja
@@ -6,7 +6,7 @@
 
   <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn container-jeu-1">
   <header class="w3-container w3-padding theme-dark-5">
-      Shouaitez-vous léguer des étoiles ?
+      Souhaitez-vous donner des étoiles ?
   </header>
   <form class="w3-container" method="POST">
   <div class="flex-horizontal space-around" style="margin:0.5em 0">
