--- a/website/templates/don_etoiles.jinja
+++ b/website/templates/don_etoiles.jinja
@@ -6,7 +6,7 @@
 
   <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:13em;">
   <header class="w3-container w3-padding theme-dark-{{ game.game_nb }}">
-      À qui shouaitez-vous léguer des étoiles ?
+      À qui souhaitez-vous léguer des étoiles ?
   </header>
   <form class="w3-container" method="POST">
   <select name="destinataire" class="w3-select w3-border w3-margin w3-round-large w3-center small" style="width:120px;" required>
