--- a/website/templates/login.jinja
+++ b/website/templates/login.jinja
@@ -33,11 +33,11 @@
         Qui est-tu ?
       </div>
 
-      <form class="w3-container" method="POST">
+      <form class="w3-container w3-padding" method="POST">
         <label>Prénom</label>
-        <input type="text" class="w3-input w3-margin-top" id="firstName" name="firstName" required>
+        <input type="text" class="w3-input w3-border w3-margin-bottom" id="firstName" name="firstName" required>
         <label>Mot de passe</label>
-        <input type="password" class="w3-input w3-margin-top" id="password" name="password" required>
+        <input type="password" class="w3-input w3-border w3-margin-bottom" id="password" name="password" required>
         <p class="w3-center"><button type="submit" class="w3-btn w3-green">Se connecter</button></p>
       </form>
     </div>
