--- a/website/templates/Jeu2-choix.jinja
+++ b/website/templates/Jeu2-choix.jinja
@@ -6,7 +6,7 @@
 
 <div id="card2" class="w3-card-4 w3-center w3-white animate__animated animate__fadeIn">
 <header class="w3-text-white large w3-padding theme-dark-2">
-    Choisissez un nombre
+    Choisissez un nombre : 
 </header>
 <form method="POST">
   <div class="w3-margin w3-lobster">
