--- a/website/templates/Jeu5-proposition.jinja
+++ b/website/templates/Jeu5-proposition.jinja
@@ -9,7 +9,7 @@
 
 <form method="POST" class="w3-card-4 w3-center medium w3-white animate__animated animate__fadeIn" style="width:320px;">
 <header class="w3-text-white w3-padding theme-dark-5">
-    Veuillez faire une offre aux autres joueurs
+    Veuillez faire une offre aux autres joueurs : 
 </header>
 <div class="w3-margin-top" style="display:flex; justify-content:center; align-items:center; flex-wrap:wrap; gap:16px">
   {% for other_player in other_players %}
