--- a/website/templates/base.jinja
+++ b/website/templates/base.jinja
@@ -123,6 +123,11 @@
     function disableBack() { window.history.forward(); }
     setTimeout("disableBack()", 0);
     window.onunload = function () { null };
+    window.onfocus = function () { 
+      const ua = navigator.userAgent;
+      if (/(tablet|ipad|playbook|silk)|(android(?!.*mobi))/i.test(ua) || /Mobile|Android|iP(hone|od)|IEMobile|BlackBerry|Kindle|Silk-Accelerated|(hpw|web)OS|Opera M(obi|ini)/.test(ua))
+        window.location = window.location;
+    }
     var socket = io();
     socket.on('connect', function() {
         socket.emit('give_identity');
