--- a/website/templates/bienvenue.jinja
+++ b/website/templates/bienvenue.jinja
@@ -3,6 +3,7 @@
 {% extends "base.jinja" %}
 {% block title %}Bienvenue{% endblock %}
 {% block stars_table %}{% endblock %}
+{% block player_money %}{% endblock %}
 {% block donation_button %}{% endblock %}
 {% block content %}
 
