--- a/website/templates/monitoring.jinja
+++ b/website/templates/monitoring.jinja
@@ -22,6 +22,7 @@
     {% for player in engine.players %}
     <div class="w3-center w3-margin w3-xlarge {{ player.color['name'] }}-light" style="width:360px;">
       <p><b>{{ player.name }}</b></p>
+      <div class="w3-xlarge">{{ player.last_page }}</div>
       <div class="w3-row w3-xlarge">
         <div class="w3-half">
           {{ player.stars }} <i class="fa fa-star"></i><br>
