--- a/website/templates/quiz.jinja
+++ b/website/templates/quiz.jinja
@@ -2,6 +2,7 @@
 {% set config = game.config %}
 {% extends "base.jinja" %}
 {% block title %}QUIZ{% endblock %}
+{% block donation_button %}{% endblock %}
 {% block content %}
 
 <div class="w3-card-4 w3-center w3-padding animate__animated animate__jackInTheBox theme-dark-5 border-5" style="max-width:90%">
