Adding file Rules.txt, modyfyng README.md, completing text.py and some adaptation

--- a/website/templates/choix_etoiles.jinja
+++ b/website/templates/choix_etoiles.jinja
@@ -1,7 +1,7 @@
 {% set game = engine.current_game %}
 {% set config = game.config %}
 {% extends "base.jinja" %}
-{% block title %}Donner des étoiles ?{% endblock %}
+{% block title %}Flouze - Jeu 4{% endblock %}
 {% block content%}
 
   <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn container-jeu-1">
