--- a/website/static/flouze.css
+++ b/website/static/flouze.css
@@ -237,6 +237,8 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 }
 
 .coin{width:0.8em; height: 0.8em; position:relative; top:0.1em; margin-right: 0.2em;}
+.flag{width:3em; height: 3em; position:relative; margin-bottom: -0.5em;}
+.flag-container{border-radius:50%; padding:0.5em;}
 
 .toast{position:absolute; bottom:5px; width:100%; margin:auto; display:flex; flex-direction: column; align-items:center; font-size:18px;}
 
